[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
default-run = "directions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "directions"
path = "src/main.rs"

[[bin]]
name = "01_two_sum"
path = "01_two_sum/main.rs"

[[bin]]
name = "02_add_two_numbers"
path = "02_add_two_numbers/main.rs"

[[bin]]
name = "03_longest_substring_without_repeating_characters"
path = "03_longest_substring_without_repeating_characters/main.rs"

[[bin]]
name = "04_median_of_two_sorted_arrays"
path = "04_median_of_two_sorted_arrays/main.rs"

[[bin]]
name = "05_longest_palindromic_substring"
path = "05_longest_palindromic_substring/main.rs"

[[bin]]
name = "06_zigzag_conversion"
path = "06_zigzag_conversion/main.rs"

[[bin]]
name = "07_reverse_integer"
path = "07_reverse_integer/main.rs"

[[bin]]
name = "08_string_to_integer_atoi"
path = "08_string_to_integer_atoi/main.rs"

[[bin]]
name = "13_roman_to_integer"
path = "13_roman_to_integer/main.rs"
