[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2021"
default-run = "directions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "directions"
path = "src/main.rs"

[[bin]]
name = "001_two_sum"
path = "001_two_sum/main.rs"

[[bin]]
name = "002_add_two_numbers"
path = "002_add_two_numbers/main.rs"

[[bin]]
name = "003_longest_substring_without_repeating_characters"
path = "003_longest_substring_without_repeating_characters/main.rs"

[[bin]]
name = "004_median_of_two_sorted_arrays"
path = "004_median_of_two_sorted_arrays/main.rs"

[[bin]]
name = "005_longest_palindromic_substring"
path = "005_longest_palindromic_substring/main.rs"

[[bin]]
name = "006_zigzag_conversion"
path = "006_zigzag_conversion/main.rs"

[[bin]]
name = "007_reverse_integer"
path = "007_reverse_integer/main.rs"

[[bin]]
name = "008_string_to_integer_atoi"
path = "008_string_to_integer_atoi/main.rs"

[[bin]]
name = "013_roman_to_integer"
path = "013_roman_to_integer/main.rs"

[[bin]]
name = "088_merge_sorted_array"
path = "088_merge_sorted_array/main.rs"

[[bin]]
name = "027_remove_element"
path = "027_remove_element/main.rs"

[[bin]]
name = "200_number_of_islands"
path = "200_number_of_islands/main.rs"

[[bin]]
name = "121_best_time_to_buy_and_sell_stock"
path = "121_best_time_to_buy_and_sell_stock/main.rs"

[[bin]]
name = "122_best_time_to_buy_and_sell_stock_ii"
path = "122_best_time_to_buy_and_sell_stock_ii/main.rs"

[[bin]]
name = "202_happy_number"
path = "202_happy_number/main.rs"

[[bin]]
name = "014_longest_common_prefix"
path = "014_longest_common_prefix/main.rs"

[[bin]]
name = "392_is_subsequence"
path = "392_is_subsequence/main.rs"

[[bin]]
name = "242_valid_anagram"
path = "242_valid_anagram/main.rs"

[[bin]]
name = "189_rotate_array"
path = "189_rotate_array/main.rs"

[[bin]]
name = "026_remove_duplicates_from_sorted_array"
path = "026_remove_duplicates_from_sorted_array/main.rs"
